[package]
name = "palomadex-incentives"
version = "0.1.0"
authors = ["Volume Finance"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cosmwasm-schema.workspace = true
cw2.workspace = true
cw20.workspace = true
cw-utils.workspace = true
thiserror.workspace = true
itertools = "0.14"
cw-asset = "4.0.0"

[dev-dependencies]
cw-multi-test.workspace = true
